# mount-iso

./: .gitignore  CMakeLists.txt  README  Readme.md
mountisoplugin/: CMakeLists.txt  mountisoaction.cpp  mountisoaction.h
